gap corrected

--- a/src/App.scss
+++ b/src/App.scss
@@ -328,6 +328,8 @@ h2 {
 
   .filter-wrapper {
     margin-bottom: 32px;
+    width: 100%;
+    gap: 25px;
   }
 }
 
